adjusted Skycon to prevent distortion

--- a/public/style.css
+++ b/public/style.css
@@ -89,8 +89,9 @@ body {
 
 #icon {
   height: 90px;
-  width: 90px;
-  padding: 10px 10px 10px 0;
+  width: 120px;
+  /* padding: 10px 10px 10px 0; */
+  padding: 0;
 }
 
 #weatherDescription {
